kuberneates-YAML-files/firefox.yml
  apiVersion: v1
  kind: Pod
  metadata:
    name: firefox-pod
    labels:
      app: firefox
  spec:
    containers:
      - name: firefox-container
        image: jlesage/firefox
        ports:
          - containerPort: 5800
