kuberneates-YAML-files/imran-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: imran-pod
  labels:
    app: nginx
spec:
  containers:
    - name: nginx-container
      image: nginx
      ports:
        - containerPort: 80
