kuberneates-YAML-files/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: firefox-pod
  labels:
    app.kubernetes.io/name: firefox-pod
spec:
  containers:
  - name: firefox-pod-container
    image: jlesage/firefox
    ports:
      - containerPort: 5800
