kuberneates-YAML-files/network-policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-firefox-to-nginx
  namespace: dev
spec:
  podSelector:
    matchLabels:
      app: nginx
    
  ingress:
  - ports:
    - port: 80
